code is only visible for encoder, key icon for encoder in player list, submit button text

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
                 <h1 class="title">Teams</h1>
                 <p class="menu-label">{{ team1.team.name }}:</p>
                 <ul class="menu-list">
-                    <li v-for="player in team1.team.members">{{ player.avatar }}&nbsp;{{ player.playerName }} 🧑</li>
+                    <li v-for="player in team1.team.members">{{ player.avatar }}&nbsp;{{ player.playerName }}{{
+                        (player.id == team1.encoder?.id ? ' 🔑' : '') }}</li>
                 </ul>
                 <p class="menu-label">{{ team2.team.name }}:</p>
                 <ul class="menu-list">
-                    <li v-for="player in team2.team.members">{{ player.avatar }}&nbsp;{{ player.playerName }} 🔑</li>
+                    <li v-for="player in team2.team.members">{{ player.avatar }}&nbsp;{{ player.playerName }}{{
+                        (player.id == team2.encoder?.id ? ' 🔑' : '') }}</li>
                 </ul>
                 <br>
                 <h1 class="title">Status</h1>
@@ -164,8 +166,8 @@
                             </div>
                             <!-- Button to submit -->
                             <div class="panel-block">
-                                <input type="button" @click="submit" class="button-submit" :class="teamFillActionClass"
-                                    value="Submit">
+                                <input type="button" :value="submit_text" @click="submit" :disabled="is_submit_disabled"
+                                    class="button-submit" :class="teamFillActionClass">
                             </div>
                         </div>
                     </div>
