--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                                 <input type="text" v-model.trim="visibleHints[0]" :class="teamBorderClass" id="hint1"
                                     :placeholder="hintPlaceholder[0]">
                                 <!-- Dropdown for guess of own team -->
-                                <select id="guess1" v-model="visibleGuess1" :class="teamFillActionClass">
+                                <select id="guess1" v-model="visibleGuess1" @change="guessChanged"
+                                    :class="teamFillActionClass">
                                     <option value="">&#9660</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -129,7 +130,8 @@
                                 <input type="text" v-model.trim="visibleHints[1]" :class="teamBorderClass" id="hint2"
                                     :placeholder="hintPlaceholder[1]">
                                 <!-- Dropdown for guess of own team -->
-                                <select id="guess2" v-model="visibleGuess2" :class="teamFillActionClass">
+                                <select id="guess2" v-model="visibleGuess2" @change="guessChanged"
+                                    :class="teamFillActionClass">
                                     <option value="">&#9660</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -150,7 +152,8 @@
                                 <input type="text" v-model.trim="visibleHints[2]" :class="teamBorderClass" id="hint3"
                                     :placeholder="hintPlaceholder[2]">
                                 <!-- Dropdown for guess of own team -->
-                                <select id="guess3" v-model="visibleGuess3" :class="teamFillActionClass">
+                                <select id="guess3" v-model="visibleGuess3" @change="guessChanged"
+                                    :class="teamFillActionClass">
                                     <option value="">&#9660</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
