--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
                     </section>
                     <footer class="columns footer">
                         <div class="column-50 center">
-                            <p>Wrong guesses of the own team:</p><span id="wrong-self-1">X</span><span
-                                id="wrong-self-2">O</span>
+                            <p>Wrong guesses of the own team:</p><span
+                                v-for="n in visibleTeam.team.failedOwnDecodings">⚫</span>
                         </div>
                         <div class="column-50 center">
-                            <p>Correct guesses of the enemy team:</p><span id="correct-others-1">O</span><span
-                                id="correct-others-2">O</span>
+                            <p>Correct guesses of the enemy team:</p><span
+                                v-for="n in visibleTeam.team.correctOtherEncodings">⚪</span>
                         </div>
                     </footer>
                 </article>
